# snark-verifier

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yaml  release.yaml
benches/: standard_plonk.rs  zkevm.rs
configs/: verify_circuit.config
examples/: StandardPlonkVerifier.sol  e2e_smoke.bytecode  e2e_smoke.calldata  e2e_smoke_verifier.sol  evm-verifier-with-accumulator.rs  evm-verifier.rs  recursion.rs  standard_plonk.bytecode  standard_plonk.calldata
scripts/: deploy_midnight_ivc.sh
snark-verifier/: Cargo.toml
snark-verifier-sdk/: Cargo.toml
snark-verifier-sdk/benches/: read_pk.rs  standard_plonk.rs  zkevm.rs  zkevm_plus_state.rs
snark-verifier-sdk/examples/: MidnightIvcVerifier.sol  MidnightIvcVerifierCompact.sol  MidnightIvcVerifierHybrid.sol  MidnightPoseidonVerifier.sol  MidnightPoseidonVerifierCompressed.sol  StandardPlonkVerifier.sol  e2e_smoke.rs  halo2_lib.rs  k_as_witness.rs  midnight_ivc.bytecode  midnight_ivc.calldata  midnight_ivc_compact_manifest.txt  midnight_ivc_compact_pages.bytecode  midnight_ivc_compact_runtime.bytecode  midnight_ivc_evm.rs  midnight_ivc_hybrid_manifest.txt  midnight_ivc_hybrid_pages.bytecode  midnight_ivc_hybrid_runtime.bytecode  midnight_poseidon.bytecode  midnight_poseidon.calldata  midnight_poseidon.rs  midnight_poseidon_compressed.bytecode  midnight_poseidon_compressed.calldata  midnight_poseidon_evm.rs  range_check.rs  standard_plonk.rs  vkey_as_witness.rs
snark-verifier-sdk/src/: evm.rs  halo2.rs  lib.rs  midnight_adapter.rs  midnight_evm_transcript.rs
snark-verifier-sdk/src/halo2/: aggregation.rs  utils.rs
snark-verifier/examples/: evm-verifier-with-accumulator.rs  evm-verifier.rs  recursion.rs
snark-verifier/src/loader/: evm.rs  native.rs
snark-verifier/src/loader/evm/: code.rs  compact_codegen.rs  compact_ir.rs  loader.rs  util.rs
snark-verifier/src/loader/evm/util/: executor.rs
snark-verifier/src/loader/halo2/: loader.rs  shim.rs
snark-verifier/src/pcs/: ipa.rs  kzg.rs
snark-verifier/src/pcs/ipa/: accumulation.rs
snark-verifier/src/pcs/ipa/multiopen/: bgh19.rs
snark-verifier/src/pcs/kzg/: accumulator.rs  decider.rs  multiopen.rs
snark-verifier/src/pcs/kzg/multiopen/: bdfg21.rs  gwc19.rs  midnight.rs
snark-verifier/src/system/: halo2.rs
snark-verifier/src/system/halo2/: test.rs
snark-verifier/src/system/halo2/transcript/: evm.rs  halo2.rs
snark-verifier/src/util/: msm.rs
snark-verifier/src/verifier/: plonk.rs
snark-verifier/src/verifier/plonk/: proof.rs  protocol.rs
src/: lib.rs  loader.rs  pcs.rs  sdk.rs  verifier.rs
src/loader/: halo2.rs
src/loader/evm/: loader.rs
src/loader/halo2/: loader.rs  shim.rs
src/pcs/kzg/: accumulator.rs  decider.rs
src/pcs/kzg/multiopen/: bdfg21.rs
src/sdk/: aggregation.rs  evm.rs  halo2.rs
src/sdk/halo2/: aggregation.rs
src/system/: halo2.rs
src/system/halo2/: aggregation.rs
src/system/halo2/test/circuit/: standard.rs
src/system/halo2/test/kzg/: evm.rs  halo2.rs
src/system/halo2/transcript/: evm.rs  halo2.rs
src/util/: arithmetic.rs  msm.rs
src/util/hash/: poseidon.rs
src/verifier/: plonk.rs
