[workspace]
members = [
    "snark-verifier",
    "snark-verifier-sdk",
]
resolver = "2"

[profile.dev]
opt-level = 3

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = true
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat" 
# codegen-units = 1
panic = "abort"
incremental = false

# For performance profiling
[profile.flamegraph]
inherits = "release"
debug = true
#[patch.crates-io]
#halo2curves-axiom = { git = "https://github.com/jtcoolen/halo2curves.git" }
#halo2-base = { git = "https://github.com/jtcoolen/halo2-lib.git", branch = "main" }

[patch."https://github.com/axiom-crypto/halo2-lib.git"]
halo2-ecc  = { git = "https://github.com/jtcoolen/halo2-lib.git", rev = "f56347dbc1162d11ba1a52eb2e5501f93445a75d" }

[patch."https://github.com/jtcoolen/halo2-lib.git"]
halo2-base = { path = "vendor/halo2-base" }

[patch.crates-io]
halo2curves-axiom = { git = "https://github.com/jtcoolen/halo2curves.git", rev = "edeb29e7964f1d24bb3bc0d2a5f9417de92a572a" }
